--- a/app.json
+++ b/app.json
@@ -44,7 +44,7 @@
     },
     "UPSTREAM_REPO_URL": {
       "description": "In case you maintain a fork, add your repo URL here.",
-      "value": "https://github.com/BianSepang/WeebProject",
+      "value": "https://github.com/IrhamFadzillah/NightCore",
       "required": false
     },
     "COUNTRY": {
@@ -122,7 +122,7 @@
     },
     "DEFAULT_BIO": {
       "description": "Default profile bio.",
-      "value": "Hoooman",
+      "value": "Hooman",
       "required": false
     },
     "G_DRIVE_DATA": {
