--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "NightCore UserBot",
   "description": "[NightCore] A modular Telegram userbot running on Python 3.8",
+  "logo": "https://telegra.ph/file/d1efe07ce63329308d626.jpg",
   "keywords": [
     "telegram",
     "userbot",
